--- a/Intro/Intro to Python.ipynb
+++ b/Intro/Intro to Python.ipynb
@@ -21,6 +21,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Jupyter Notebooks is a platform that allows the programmers and data scientists to see the output from their code right after running the cell. It allows allows for the textual data in the so-called markdown cells.\n",
+    "All the code cells are grayed-out and all the markdown cells just appear as black-on-white text. To run a cell (either code or markdown) you need to clck shift-return.\n",
+    "Besides writing text in the markdown cells, you can leave comments in the code cells by using a singele # sign."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Types "
    ]
   },
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,12 +110,14 @@
        "'...'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# assign the variable hello to the output \"Hello World\"\n",
+    "\n",
     "hello  = \"...\"\n",
     "hello"
    ]
@@ -486,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +530,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# here's how you can create an empty list\n",
+    "# you'll learn where to use it later in the workshop\n",
+    "\n",
+    "empty_lst = []\n",
+    "empty_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +563,7 @@
        "[2, 'name', 3, [5, 6, 7], 'berkeley']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,11 +574,143 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "To itterate through the list, you can use square brackets with an index of an object you are interested in. Like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'name'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remember that Python, like many programming languages, starts counting from 0.\n",
+    "\n",
+    "new_lst[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice also that each component of the list separated by a comma is a single object. So the list inside of the list will be a single object. If you want to itterate through a list inside of the list, you will need to use the square brackets twice. Like we did here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_lst[3][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also replace the objects in the list by using iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 'name', 3, [5, 6, 7], 'berkeley']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_lst[0] = 6\n",
+    "new_lst"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a few ways you can copy your list over into a new variable. But these copies will behave differently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 'name', 7, [5, 6, 7], 'berkeley']\n",
+      "[6, 'name', 7, [5, 6, 7], 'berkeley']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# before running this cell, think about the output of lst_2 & new_lst\n",
+    "\n",
+    "lst_2 = new_lst\n",
+    "lst_2[2] = 7\n",
+    "\n",
+    "print(new_lst)\n",
+    "print(lst_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 'name', 7, [5, 6, 7], 'berkeley']\n",
+      "[6, 'name', 8, [5, 6, 7], 'berkeley']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compare it to this way of copying\n",
+    "\n",
+    "lst_3 = new_lst[:]\n",
+    "lst_3[2] = 8\n",
+    "\n",
+    "print(new_lst)\n",
+    "print(lst_3)"
+   ]
   },
   {
    "cell_type": "code",
