--- a/Intro-to-Python-Day-2.ipynb
+++ b/Intro-to-Python-Day-2.ipynb
@@ -36,21 +36,20 @@
     "\n",
     "### Table of Contents\n",
     "\n",
-    "1 - [Quick Check](#section1)<br>\n",
     "\n",
-    "2 - [Conditionals](#section2)<br>  \n",
+    "1 - [Conditionals](#section2)<br>  \n",
     "\n",
-    "3 - [Loops](#section3) <br>\n",
+    "2 - [Loops](#section3) <br>\n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; a - [For Loops](#subsection9)<br>\n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; b - [While Loops](#subsection10)<br>\n",
     "\n",
-    "4 - [Functions](#section4)<br> \n",
+    "3 - [Functions](#section4)<br> \n",
     "\n",
     "<!--5 - [Files](#section5)<br> - read, write, edit and save-->\n",
     "\n",
-    "5 - [Libraries](#section5)<br> \n",
+    "4 - [Libraries](#section5)<br> \n",
     "\n",
     "<!--9 - [Errors](#section9)<br> -->\n",
     "\n",
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,77 +69,6 @@
     "import pandas as pd\n",
     "import math"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# Quick Check <a id='section1'></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -471,8 +399,17 @@
     "# EXAMPLE \n",
     "\n",
     "# square each value in the tuple \n",
-    "for i in (1,2,3):\n",
-    "    print(i**i)"
+    "new = []\n",
+    "\n",
+    "for x in (2, 3):\n",
+    "    x = x**2\n",
+    "    new+=[x]\n",
+    "    print(new)\n",
+    "    for i in new:\n",
+    "        print(i+2)\n",
+    "    \n",
+    "\n",
+    "x"
    ]
   },
   {
@@ -487,7 +424,18 @@
     "# recall that the elements in the list do not have to have the same type \n",
     "\n",
     "for i in [1, 2.0, \"k\"]:\n",
-    "    print(i)"
+    "    print(i)\n",
+    "    \n",
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(\"Kseniya\")"
    ]
   },
   {
@@ -499,9 +447,65 @@
     "# EXAMPLE \n",
     "\n",
     "# print each animal in the animals list\n",
-    "animals = [\"dog\", \"cat\", \"bird\", \"fish\"]\n",
+    "\n",
+    "animals = [\"dog\", \"cat\", \"bird\", \"fish\", \"bear\"]\n",
+    "new_animal = []\n",
+    "\n",
     "for animal in animals:\n",
-    "    print(animal)"
+    "    print(new_animal)\n",
+    "    new_animal += [animal]\n",
+    "    print(new_animal)\n",
+    "    \n",
+    "#print(new_animal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_animal = new_animal + [\"duck\"]\n",
+    "new_animal\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_animal += [\"goose\"]\n",
+    "new_animal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_arr = np.arange(4)\n",
+    "x_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_arr*3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_list = [0,1,2,3]\n",
+    "x_list*3"
    ]
   },
   {
@@ -519,7 +523,20 @@
     "\n",
     "for radius in radiuses: \n",
     "    area = math.pi*radius**2\n",
-    "    print(area)"
+    "    new_area = area +50\n",
+    "    print(new_area)\n",
+    "    \n",
+    "area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"kseniya\"\n",
+    "name.upper()"
    ]
   },
   {
@@ -535,6 +552,15 @@
     "\n",
     "for letter in random_sentence:\n",
     "    print(letter.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_sentence.upper()"
    ]
   },
   {
@@ -635,19 +661,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my original x is  10\n",
+      "81\n",
+      "my original x is  9\n",
+      "my original x is  8\n",
+      "49\n",
+      "my original x is  7\n",
+      "my original x is  6\n",
+      "25\n",
+      "my original x is  5\n",
+      "my original x is  4\n",
+      "9\n",
+      "my original x is  3\n",
+      "my original x is  2\n",
+      "1\n",
+      "my original x is  1\n"
+     ]
+    }
+   ],
    "source": [
     "# EXERCISE\n",
     "\n",
     "# Create a while loop that skips even numbers and squares it\n",
     "\n",
     "x = 10 \n",
-    "while ... :\n",
-    "    ...\n",
-    "    if x % 2 !=0 :\n",
-    "        print(...)"
+    "while x:\n",
+    "    print(\"my original x is \", x)\n",
+    "    x = x-1\n",
+    "    if x % 2 != 0 :\n",
+    "        print(x**2)"
    ]
   },
   {
@@ -695,7 +744,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "9"
       ]
      },
      "execution_count": 5,
@@ -706,7 +755,7 @@
    "source": [
     "# EXAMPLE \n",
     "\n",
-    "max(2, 5)"
+    "max(2, 5, 9, 7)"
    ]
   },
   {
@@ -728,7 +777,7 @@
    "source": [
     "# EXAMPLE \n",
     "\n",
-    "min(3,7)"
+    "min(3, 7)"
    ]
   },
   {
@@ -741,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +799,7 @@
        "'dog'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +807,27 @@
    "source": [
     "# EXAMPLE \n",
     "\n",
-    "max(\"cat\", \"dog\")"
+    "max(\"dog\", \"Dog\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([2,3,5,[7, 8, 10, 4]])"
    ]
   },
   {
@@ -778,7 +847,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Math\".lower() == \"math\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +876,7 @@
        "'hello world'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,48 +886,49 @@
     "\n",
     "hello = \"Hello World\"\n",
     "\n",
-    "hello.lower()"
+    "hello = hello.lower()\n",
+    "hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n",
-      "Hello World\n"
+      "HELLO WORLD\n",
+      "hello world\n"
      ]
     }
    ],
    "source": [
     "# EXAMPLE \n",
     "\n",
-    "print(hello.lower())\n",
+    "print(hello.upper())\n",
     "print(hello)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ellipsis\n"
+      "I GO TO UC BERKELEY\n"
      ]
     }
    ],
    "source": [
     "# EXERCISE \n",
     "\n",
-    "phrase = \"...\"\n",
-    "phrase = ...\n",
+    "phrase = \"I go to UC Berkeley\"\n",
+    "phrase = phrase.upper()\n",
     "\n",
     "print(phrase)"
    ]
@@ -859,16 +949,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE\n",
     "\n",
     "def square(x):\n",
     "    return x**2\n",
     "\n",
-    "square(3)"
+    "\n",
+    "a = square(3)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [1,2,3]:\n",
+    "    print(square(i))"
    ]
   },
   {
@@ -890,20 +1013,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n",
+      "Use the square function instead\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE\n",
     "\n",
     "def mult_not_eq(x, y):\n",
+    "    # if the first number is not equal to the second\n",
+    "    print(x, y)\n",
     "    if x!=y:\n",
+    "    # I will multiply them\n",
     "        return x*y\n",
     "    else:\n",
     "        print(\"Use the square function instead\")\n",
     "        \n",
     "        \n",
-    "mult_not_eq(2, 5)"
+    "mult_not_eq(2, 2)"
    ]
   },
   {
