--- a/Intro-to-Python-Day-2.ipynb
+++ b/Intro-to-Python-Day-2.ipynb
@@ -92,9 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE \n",
     "\n",
@@ -103,9 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE \n",
     "\n",
@@ -121,9 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE \n",
     "type(0< -1)"
@@ -131,9 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE  \n",
     "type(abs(-2) < abs(2))"
@@ -172,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,9 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True. 5 is less than 6!\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE\n",
     "\n",
@@ -279,9 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, 5!\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 1 \n",
     "\n",
@@ -293,9 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fizz\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 2 \n",
     "\n",
@@ -310,9 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cal NERDS\n"
+     ]
+    }
+   ],
    "source": [
     "# EXERCISE 1\n",
     "\n",
@@ -328,9 +404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Once you completed the code above, try it with a new string where the string is NOT \"NERDS\". \n",
     "# We have suggeste string2. \n",
@@ -392,31 +479,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE \n",
     "\n",
     "# square each value in the tuple \n",
-    "new = []\n",
     "\n",
-    "for x in (2, 3):\n",
-    "    x = x**2\n",
-    "    new+=[x]\n",
-    "    print(new)\n",
-    "    for i in new:\n",
-    "        print(i+2)\n",
-    "    \n",
-    "\n",
-    "x"
+    "for x in (1,2,3):\n",
+    "    print(x**2)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2.0\n",
+      "k\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'k'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE \n",
     "\n",
@@ -427,15 +537,6 @@
     "    print(i)\n",
     "    \n",
     "i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(\"Kseniya\")"
    ]
   },
   {
@@ -461,58 +562,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_animal = new_animal + [\"duck\"]\n",
-    "new_animal\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_animal += [\"goose\"]\n",
-    "new_animal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_arr = np.arange(4)\n",
-    "x_arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_arr*3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_list = [0,1,2,3]\n",
-    "x_list*3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53.1415926535898\n",
+      "78.27433388230814\n",
+      "128.53981633974485\n",
+      "203.93804002589985\n",
+      "304.46900494077323\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "254.46900494077323"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE \n",
     "\n",
@@ -531,19 +605,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"kseniya\"\n",
-    "name.upper()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      " \n",
+      "V\n",
+      "E\n",
+      "R\n",
+      "Y\n",
+      " \n",
+      "L\n",
+      "O\n",
+      "N\n",
+      "G\n",
+      " \n",
+      "W\n",
+      "O\n",
+      "R\n",
+      "D\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE \n",
     "\n",
@@ -555,15 +642,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random_sentence.upper()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -572,9 +650,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'ellipsis' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-e2d4cd5ebbf9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnumbers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'ellipsis' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "# EXERCISE \n",
     "\n",
@@ -661,28 +751,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my original x is  10\n",
-      "81\n",
-      "my original x is  9\n",
-      "my original x is  8\n",
-      "49\n",
-      "my original x is  7\n",
-      "my original x is  6\n",
-      "25\n",
-      "my original x is  5\n",
-      "my original x is  4\n",
-      "9\n",
-      "my original x is  3\n",
-      "my original x is  2\n",
-      "1\n",
-      "my original x is  1\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-194d83374e83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -692,11 +772,11 @@
     "# Create a while loop that skips even numbers and squares it\n",
     "\n",
     "x = 10 \n",
-    "while x:\n",
-    "    print(\"my original x is \", x)\n",
-    "    x = x-1\n",
+    "while ...:\n",
+    "    ...\n",
+    "    ...\n",
     "    if x % 2 != 0 :\n",
-    "        print(x**2)"
+    "        ..."
    ]
   },
   {
@@ -738,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +827,7 @@
        "9"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +849,7 @@
        "3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +879,7 @@
        "'dog'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,8 +891,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another built-in function you will most likely use in your coding a lot, is  **len(   )**. It is used to learn about the length of different objects. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# EXAMPLE\n",
+    "\n",
+    "len(\"dog\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -821,13 +930,73 @@
        "4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len([2,3,5,[7, 8, 10, 4]])"
+    "# EXERCISE\n",
+    "\n",
+    "# what do you think this cell will output?\n",
+    "\n",
+    "\n",
+    "len(\"dog \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When used with lists, it counts only the \"outter\" objects. Meaning, if there are lists or arrays inside of your list, no matter however many objects each of them has, the len(  ) will count the whole list (array, tuple, dictionary) as a single object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# EXAMPLE\n",
+    "\n",
+    "\n",
+    "len([1,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random = [[1,2,3,4],[4,5,6]]\n",
+    "\n",
+    "# Before running this cell, can you guess the output \n",
+    "# it will give you?\n",
+    "\n",
+    "len(random)"
    ]
   },
   {
@@ -847,22 +1016,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD\n",
+      "Hello World\n"
+     ]
     }
    ],
    "source": [
-    "\"Math\".lower() == \"math\""
+    "# EXAMPLE \n",
+    "\n",
+    "hello = \"Hello World\"\n",
+    "\n",
+    "print(hello.upper())\n",
+    "print(hello)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have you noticed that the variable **hello** didn't change? Can you think why is that? "
    ]
   },
   {
@@ -884,31 +1063,16 @@
    "source": [
     "# EXAMPLE \n",
     "\n",
-    "hello = \"Hello World\"\n",
     "\n",
     "hello = hello.lower()\n",
     "hello"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HELLO WORLD\n",
-      "hello world\n"
-     ]
-    }
-   ],
    "source": [
-    "# EXAMPLE \n",
-    "\n",
-    "print(hello.upper())\n",
-    "print(hello)"
+    "In the cell below, create a variable **phrase** which tells us what school you go to. Then change all the letters to upper-cased letters."
    ]
   },
   {
@@ -927,8 +1091,9 @@
    "source": [
     "# EXERCISE \n",
     "\n",
-    "phrase = \"I go to UC Berkeley\"\n",
-    "phrase = phrase.upper()\n",
+    "\n",
+    "phrase = \"I go to ...\"\n",
+    "...\n",
     "\n",
     "print(phrase)"
    ]
@@ -972,26 +1137,6 @@
     "\n",
     "a = square(3)\n",
     "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "4\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in [1,2,3]:\n",
-    "    print(square(i))"
    ]
   },
   {
@@ -1300,7 +1445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
