--- a/Intro-to-Python-Day-2.ipynb
+++ b/Intro-to-Python-Day-2.ipynb
@@ -423,6 +423,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a for-loop that multiplies every number in the list by 3 (and outputs it on every step)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXERCISE \n",
+    "\n",
+    "numbers = [1, 5, 7, 0, 10, 4, 7]\n",
+    "\n",
+    "for i in ...:\n",
+    "    ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -438,9 +459,7 @@
     "for animal in animals:\n",
     "    print(new_animal)\n",
     "    new_animal += [animal]\n",
-    "    print(new_animal)\n",
-    "    \n",
-    "#print(new_animal)"
+    "    print(new_animal)"
    ]
   },
   {
@@ -483,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a for-loop that multiplies every number in the list by 3 (and outputs it on every step)."
+    "As we mentioned before, you can loop through any iterable data type or data sctructure. That means that we can even loop through dictionaries."
    ]
   },
   {
@@ -492,12 +511,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# EXERCISE \n",
+    "# EXAMPLE\n",
     "\n",
-    "numbers = [1, 5, 7, 0, 10, 4, 7]\n",
+    "cities = {'New York': 1, 'Los Angeles': 2, 'Miami': 3, 'Chicago': 4}\n",
+    "    \n",
+    "for key in cities:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the cell below, try looping through the values instead of keys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EXERCISE\n",
     "\n",
-    "for i in ...:\n",
-    "    ..."
+    "for value in cities:\n",
+    "    print(...)"
    ]
   },
   {
@@ -905,11 +943,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Importing Libraries <a id='section5'></a>\n",
-    "\n",
-    "![imports](https://external-preview.redd.it/ZVPjiFo_Ubl4JeiU63SaTjdIoq5zveSnNZimKpgn2I8.png?auto=webp&s=bf32c94b630befa121075c1ae99b2599af6dedc5) \n",
-    "\n",
-    "[source](https://www.reddit.com/r/ProgrammerHumor/comments/cgtk7s/theres_no_need_to_reinvent_the_wheel_oc/)\n",
+    "### Importing Libraries <a id='section5'></a>\n",
     "\n"
    ]
   },
@@ -973,138 +1007,6 @@
     "\n",
     "area_circle"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Another library you will see often is **matplotlib**. It is used for visualizations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXAMPLE\n",
-    "\n",
-    "plt.plot([1, 2, 3, 4])\n",
-    "plt.ylabel('random numbers')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also plot two sets of numbers against each other (like x and y axes)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXAMPLE\n",
-    "\n",
-    "plt.plot([1, 2, 3, 4], [1, 4, 9, 16])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also modify colors and shapes of your plot."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXAMPLE\n",
-    "\n",
-    "plt.plot([1, 2, 3, 4, 5, 6, 7], [1, 4, 9, 15, 25, 30, 40], \"ro\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also have multiple plots on the same figure (picture) so that you can compare them against one another."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXERCISE\n",
-    "\n",
-    "rand = np.arange(0., 5., 0.2)\n",
-    "\n",
-    "# red dashes, blue squares and green triangles\n",
-    "plt.plot(rand, rand, 'r--', rand, rand**2, 'bs')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now it's time for you to try visualizations. Create a plot for cos(x)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXERCISE\n",
-    "\n",
-    "# Hint: use numpy to retrieve the cos function\n",
-    "\n",
-    "x = np.arange(0,4*np.pi,0.1) \n",
-    "y = ...\n",
-    "\n",
-    "...\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How about sin and cos on the same graph?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# EXERCISE\n",
-    "\n",
-    "# Hint: you can reuse the same x and y\n",
-    "# Hint: you will need a new variable for sin\n",
-    "# Hint: check out how we compared two functions on the same graph previously\n",
-    "\n",
-    "z = ...\n",
-    "\n",
-    "plt.plot(..., ..., ..., ...) \n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
